--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-  "name": "angular-jeopardy",
+  "name": "angular",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "dependencies": {
-    "angular": "^1.5.2",
-    "angular-route": "^1.5.2",
-    "bootstrap": "^3.3.6"
-  },
-  "devDependencies": {
-    "serve": "^1.4.0"
-  },
+  "main": "app.module.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run watch & ./node_modules/.bin/serve",
-    "bundle": "./node_modules/.bin/browserify --entry app/app.module.js -o bundle.js",
-    "watch": "./node_modules/.bin/watchify --entry app/app.module.js -o bundle.js"
+    "start": "npm run watch & node_modules/.bin/serve",
+    "bundle": "./node_modules/.bin/browserify --entry app.module.js -o bundle.js",
+    "watch": "./node_modules/.bin/watchify --entry app.module.js -o bundle.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bootstrap": "^3.3.6",
+    "serve": "^1.4.0",
+    "underscore": "^1.8.3"
+  },
+  "devDependencies": {
+    "browserify": "^13.0.0",
+    "serve": "^1.4.0",
+    "watchify": "^3.7.0"
+  },
+  "description": "Angular Jeopardy"
 }
