--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^3.3.6",
+    "jquery": "^2.2.2",
     "serve": "^1.4.0",
     "underscore": "^1.8.3"
   },
